[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/tiles/tileBlue_08.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/tileBlue_04.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/tileBlue_01.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/tileBlue_05.png" type="Texture" id=4]
[ext_resource path="res://assets/background/set1_background.png" type="Texture" id=5]
[ext_resource path="res://assets/background/set2_tiles.png" type="Texture" id=6]
[ext_resource path="res://assets/background/set4_hills.png" type="Texture" id=7]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Gem.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ExitDoor.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Level.gd" type="Script" id=11]
[ext_resource path="res://assets/items/yellowGem.png" type="Texture" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 32, 0, 32, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=5]
0/name = "tileBlue_01.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileBlue_04.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileBlue_05.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileBlue_08.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 11 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2( 0, 300 )

[node name="MainBG" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.384314 )
position = Vector2( 992, 280 )
scale = Vector2( 3.92968, 2.00557 )
texture = ExtResource( 5 )

[node name="Diamonds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0 )

[node name="Sprite0" type="Sprite" parent="ParallaxBackground/Diamonds"]
texture = ExtResource( 6 )
offset = Vector2( -640, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Diamonds"]
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Diamonds"]
texture = ExtResource( 6 )
offset = Vector2( 640, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Diamonds"]
texture = ExtResource( 6 )
offset = Vector2( 1280, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Diamonds"]
texture = ExtResource( 6 )
offset = Vector2( 1920, 0 )

[node name="Hills" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Hills"]
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Hills"]
texture = ExtResource( 7 )
offset = Vector2( 600, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Hills"]
texture = ExtResource( 7 )
offset = Vector2( 1250, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 524287, 3, 0, 655359, 3, 0, 589893, 3, 0, 786431, 3, 0, 720921, 1, 0, 720923, 2, 0, 720925, 0, 0, 720934, 1, 0, 720936, 2, 0, 720938, 0, 0, 720965, 3, 0, 786457, 1610612736, 0, 786459, 1610612738, 0, 786461, 1610612737, 0, 786470, 3, 0, 786472, 3, 0, 786474, 3, 0, 917503, 3, 0, 851981, 1, 0, 851983, 2, 0, 851985, 2, 0, 851987, 0, 0, 851993, 1, 0, 851995, 2, 0, 851997, 0, 0, 852037, 3, 0, 917517, 3, 0, 917519, 3, 0, 917521, 3, 0, 917523, 3, 0, 917529, 1610612736, 0, 917531, 1610612738, 0, 917533, 1610612737, 0, 917542, 1610612736, 0, 917544, 1610612738, 0, 917546, 1610612737, 0, 1048575, 3, 0, 983083, -1073741824, 0, 983084, -1610612735, 0, 983109, 3, 0, 1048579, 1, 0, 1048581, 2, 0, 1048583, 2, 0, 1048585, 0, 0, 1048589, 3, 0, 1048591, 3, 0, 1048593, 3, 0, 1048595, 3, 0, 1048597, 3, 0, 1048613, -1073741824, 0, 1048614, -1610612735, 0, 1048628, 3, 0, 1048630, 3, 0, 1048632, 3, 0, 1048634, 3, 0, 1048636, 3, 0, 1179647, 3, 0, 1114113, 1, 0, 1114115, 3, 0, 1114117, 3, 0, 1114119, 3, 0, 1114121, 3, 0, 1114123, 0, 0, 1114155, -1073741822, 0, 1114156, -1610612734, 0, 1114181, 3, 0, 1179649, 1610612736, 0, 1179659, 1610612737, 0, 1179661, 3, 0, 1179663, 3, 0, 1179665, 3, 0, 1179667, 3, 0, 1179669, 3, 0, 1179685, -1073741822, 0, 1179686, -1610612734, 0, 1310719, 3, 0, 1245187, 3, 0, 1245189, 3, 0, 1245191, 3, 0, 1245193, 3, 0, 1245207, 2, 0, 1245209, 0, 0, 1245227, -1073741822, 0, 1245228, -1610612734, 0, 1245251, 3, 0, 1245253, 3, 0, 1310733, 3, 0, 1310735, 3, 0, 1310737, 3, 0, 1310739, 3, 0, 1310741, 3, 0, 1310743, 3, 0, 1310745, 3, 0, 1310747, 3, 0, 1310749, 3, 0, 1310751, 3, 0, 1310753, 3, 0, 1310755, 3, 0, 1310757, 3, 0, 1441791, 3, 0, 1376259, 3, 0, 1376261, 3, 0, 1376263, 3, 0, 1376265, 3, 0, 1376299, -1073741822, 0, 1376300, -1610612734, 0, 1376321, 3, 0, 1376323, 3, 0, 1376325, 3, 0, 1441805, 3, 0, 1441807, 3, 0, 1441809, 3, 0, 1441811, 3, 0, 1441813, 3, 0, 1441815, 3, 0, 1441817, 3, 0, 1441819, 3, 0, 1441821, 3, 0, 1441823, 3, 0, 1441825, 3, 0, 1441827, 3, 0, 1441829, 3, 0, 1572863, 3, 0, 1507331, 3, 0, 1507333, 3, 0, 1507335, 3, 0, 1507337, 3, 0, 1507371, 3, 0, 1507373, 3, 0, 1507375, 3, 0, 1507377, 3, 0, 1507379, 3, 0, 1507381, 3, 0, 1507383, 3, 0, 1507385, 3, 0, 1507387, 3, 0, 1507389, 3, 0, 1507391, 3, 0, 1507393, 3, 0, 1507395, 3, 0, 1507397, 3, 0, 1572877, 3, 0, 1572879, 3, 0, 1572881, 3, 0, 1572883, 3, 0, 1572885, 3, 0, 1572887, 3, 0, 1572889, 3, 0, 1572891, 3, 0, 1572893, 3, 0, 1572895, 3, 0, 1572897, 3, 0, 1572899, 3, 0, 1572901, 3, 0, 1703935, 3, 0, 1638403, 3, 0, 1638405, 3, 0, 1638407, 3, 0, 1638409, 3, 0, 1638443, 3, 0, 1638445, 3, 0, 1638447, 3, 0, 1638449, 3, 0, 1638451, 3, 0, 1638453, 3, 0, 1638455, 3, 0, 1638457, 3, 0, 1638459, 3, 0, 1638461, 3, 0, 1638463, 3, 0, 1638465, 3, 0, 1638467, 3, 0, 1638469, 3, 0, 1703969, 3, 0, 1703971, 3, 0, 1703973, 3, 0, 1769515, 3, 0, 1769517, 3, 0, 1769519, 3, 0, 1769521, 3, 0, 1769523, 3, 0, 1769525, 3, 0, 1769527, 3, 0, 1769529, 3, 0, 1769531, 3, 0, 1769533, 3, 0, 1769535, 3, 0, 1769537, 3, 0, 1769539, 3, 0, 1769541, 3, 0 )

[node name="Gems" type="Node" parent="."]

[node name="Set1" type="Node2D" parent="Gems"]

[node name="Gem" parent="Gems/Set1" instance=ExtResource( 9 )]
position = Vector2( 472, 360 )

[node name="Gem2" parent="Gems/Set1" instance=ExtResource( 9 )]
position = Vector2( 363.017, 391.918 )

[node name="Gem3" parent="Gems/Set1" instance=ExtResource( 9 )]
position = Vector2( 412.784, 372.389 )

[node name="Set2" type="Node2D" parent="Gems"]

[node name="Gem" parent="Gems/Set2" instance=ExtResource( 9 )]
position = Vector2( 840, 304 )

[node name="Gem4" parent="Gems/Set2" instance=ExtResource( 9 )]
position = Vector2( 896, 304 )

[node name="Gem5" parent="Gems/Set2" instance=ExtResource( 9 )]
position = Vector2( 952, 304 )

[node name="Set3" type="Node2D" parent="Gems"]

[node name="Gem2" parent="Gems/Set3" instance=ExtResource( 9 )]
position = Vector2( 1256, 304 )

[node name="Gem3" parent="Gems/Set3" instance=ExtResource( 9 )]
position = Vector2( 1368, 304 )

[node name="Gem4" parent="Gems/Set3" instance=ExtResource( 9 )]
position = Vector2( 1312, 304 )

[node name="Set4" type="Node2D" parent="Gems"]

[node name="Gem" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1896, 648 )

[node name="Gem7" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1880, 488 )

[node name="Gem8" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1768, 488 )

[node name="Gem2" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1736, 704 )

[node name="Gem3" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1832, 656 )

[node name="Gem4" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1872, 688 )

[node name="Gem5" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1824, 704 )

[node name="Gem6" parent="Gems/Set4" instance=ExtResource( 9 )]
position = Vector2( 1768, 672 )

[node name="ExitDoor" parent="." instance=ExtResource( 10 )]
position = Vector2( 1824, 480 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 157.145, 482.659 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GemIcon" type="Sprite" parent="HUD"]
position = Vector2( 40, 40 )
texture = ExtResource( 12 )

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 68.6364
margin_top = 28.2045
margin_right = 108.636
margin_bottom = 42.2045
rect_scale = Vector2( 2, 2 )
text = "= 0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gem_collected" from="Gems/Set1/Gem" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set1/Gem2" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set1/Gem3" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set2/Gem" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set2/Gem4" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set2/Gem5" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set3/Gem2" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set3/Gem3" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set3/Gem4" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem7" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem8" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem2" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem3" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem4" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem5" to="." method="_on_Gem_gem_collected"]
[connection signal="gem_collected" from="Gems/Set4/Gem6" to="." method="_on_Gem_gem_collected"]
[connection signal="body_entered" from="ExitDoor" to="." method="_on_ExitDoor_body_entered"]
[connection signal="body_exited" from="ExitDoor" to="." method="_on_ExitDoor_body_exited"]
